<resources>
    <string name="app_name">VickyPracticalDevStreeIT</string>

    <string name="google_map_key">AIzaSyBSNyp6GQnnKlrMr7hD2HGiyF365tFlK5U</string>
    <string name="label_no_place_available">No place Available.\n Let\'s start by adding few places</string>
    <string name="label_add_poi">Add POI</string>
    <string name="label_enter_address">Search Place.. Eg Ahmedabad</string>
    <string name="label_do_you_want_to_save_this_selected_location">Do you want to save this selected location?</string>
    <string name="label_save">Save</string>
    <string name="label_update">Update</string>
    <string name="label_sort_distance_in_descending_order">Sort distance in descending order</string>
    <string name="label_sort_distance_in_ascending_order">Sort distance in ascending order</string>
    <string name="label_apply">Apply</string>
    <string name="label_clear">Clear</string>
    <string name="label_sort_by">SORT BY</string>
    <string name="label_location">Location</string>
    <string name="label_location_source">Location Source</string>
    <string name="title_delete_location">Delete Location</string>
    <string name="title_are_you_sure_you_want_to_delete_this_location">Are you sure you want to delete this location?</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="distance">Distance</string>
</resources>