<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="2dp"
    android:background="@drawable/bg_bottom_sheet">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_sort_by"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_close">

        <RadioButton
            android:id="@+id/radioAsc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/label_sort_distance_in_ascending_order" />

        <RadioButton
            android:id="@+id/radioDesc"
            android:layout_width="match_parent"
            android:fontFamily="@font/poppins_regular"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/label_sort_distance_in_descending_order" />
    </RadioGroup>

    <Button
        android:id="@+id/btnApplySort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_apply"
        android:background="@drawable/bg_button"
        android:layout_marginEnd="@dimen/_13sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textSize="@dimen/_13sdp"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_13sdp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radioGroup" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_clear"
        android:layout_marginEnd="@dimen/_13sdp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintEnd_toStartOf="@id/btnApplySort"
        app:layout_constraintBottom_toBottomOf="@id/btnApplySort"
        app:layout_constraintTop_toTopOf="@id/btnApplySort"/>
</androidx.constraintlayout.widget.ConstraintLayout>