<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_12sdp"
    android:layout_marginHorizontal="@dimen/_12sdp"
    android:layout_marginTop="2dp"
    android:elevation="2dp"
    android:background="@drawable/bg_rect_shape"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="Primary"
        android:textColor="@color/blue"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        app:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline"
        />



    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_edit"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_edit"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@id/txt_place_name"
        app:layout_constraintBottom_toBottomOf="@id/txt_place_name"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_delete"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/ic_delete_icon"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintStart_toEndOf="@id/img_edit"
        app:layout_constraintTop_toTopOf="@id/txt_place_name"
        app:layout_constraintBottom_toBottomOf="@id/txt_place_name"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_place_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:layout_marginHorizontal="10dp"
        app:layout_constraintVertical_bias="0"
        android:text="@string/address"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txt_place_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_Distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constrainedWidth="true"
        android:layout_marginHorizontal="10dp"
        android:text="@string/distance"
        android:visibility="gone"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/txt_place_address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>